k8s/auth/oauth2-proxy.yaml
---
# Source: oauth2-proxy/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    release: o2p
    heritage: Helm
  name: o2p-oauth2-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: oauth2-proxy
    release: o2p
---
# Source: oauth2-proxy/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2-proxy
      release: o2p
  template:
    metadata:
      annotations:
        checksum/config: 0d50a1f2d8305e3bd55df41008102248e2c222b4240ef97046427bd246401258
        checksum/config-emails: 01ba4719c80b6fe911b091a7c05124b64eeece964e09c058ef8f9805daca546b
        checksum/secret: e46e3dc23114c5d6e5ef26d352d93c6a0cb8f99a57977cbe3bf76a812e93c837
        checksum/google-secret: e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
      labels:
        app: oauth2-proxy
        release: "o2p"
    spec:
      containers:
      - name: oauth2-proxy
        image: "quay.io/oauth2-proxy/oauth2-proxy:v6.1.1"
        imagePullPolicy: IfNotPresent
        args:
          - --http-address=0.0.0.0:4180
          - --config=/etc/oauth2-proxy/oauth2-proxy.cfg
        ports:
          - containerPort: 4180
            name: http
            protocol: TCP
        livenessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
        readinessProbe:
          httpGet:
            path: /ping
            port: http
            scheme: HTTP
          initialDelaySeconds: 0
          timeoutSeconds: 1
          successThreshold: 1
          periodSeconds: 10
        resources:
          limits:
            cpu: 100m
            memory: 300Mi
          requests:
            cpu: 10m
            memory: 50Mi
        volumeMounts:
        - mountPath: /etc/oauth2-proxy
          name: configmain
      volumes:
      - configMap:
          defaultMode: 420
          name: o2p-oauth2-proxy
        name: configmain
      tolerations:
        []
---
# Source: oauth2-proxy/templates/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: oauth2-proxy
    chart: oauth2-proxy-2.2.1
    heritage: Helm
    release: o2p
  name: o2p-oauth2-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: nginx-external
spec:
  rules:
    - host: auth.11fs-structs.com
      http:
        paths:
          - path: /
            backend:
              serviceName: o2p-oauth2-proxy
              servicePort: 80
  tls:
    - hosts:
      - auth.11fs-structs.com
      secretName: auth-11fs-structs-tls
